refactor: use value for allowedCors